update structure